Colab을 통해 생성됨

--- a/Project3-PotentialTalents/Steps2_LambdaRank.ipynb
+++ b/Project3-PotentialTalents/Steps2_LambdaRank.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOKYq8obJFJL27mr9+bdvPD",
+      "authorship_tag": "ABX9TyOrBNCgtVo1gto9Wsb2sIZa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1506,6 +1506,108 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8M46OxJak5E4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3_sujr-ek5Cm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Conclusion**\n",
+        "<br> In this project, I implemented <b>Learning-To-Rank</b> using borh <b>RankNet</b> and <b>LambdaRank</b>, exploring the differences between pairwise and listwise ranking approaches. Here's a summary of key findings and challenges encountered during training:\n",
+        "\n",
+        "<b>1. RankNet (Pairwise Ranking)</b>\n",
+        "- Approach: RankNet learns by comparing <b>two candidates at a time</b> and determining which one should be ranked higher.\n",
+        "- Loss Function: Uses <b>Binary Cross-Entropy (BCE) Loss</b>, computed using the sigmoid difference btwn two candidate's scores.\n",
+        "\n",
+        "<b>Pairwise Probabiliy Calculation:</b>\n",
+        "$$P_{a>b} = \\sigma(S_{a}-S_{b}) = \\frac{1}{1+e^-(S_{a}-S_{b})}$$\n",
+        "\n",
+        "where \\S_{a}, \\S_{b} are scores assigned to candidates a and b by the neural network.\n",
+        "- Challenges Encountered:\n",
+        "  - Where to apply sigmoid? Initially, applying sogmid at the output layer led to unstable training, and it was better placed inside the loss function.\n",
+        "  - Gradient issues: Had to ensure proper gradient clipping to prevent exploding/vanishing gradients.\n",
+        "  - Why were scores negative? Learned that raw scores should not be directly interpreted as probabilities."
+      ],
+      "metadata": {
+        "id": "NkwVEPP57t-V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<b>2. LambdaRank (Listwise ranking)</b>\n",
+        "- Approach: Instead of just two candidates, LambdaRank considers the <b>entire list of candidates at once </b>, optimizing for ranking-based metrics like <b>NDCG (Normalized Discounted Cumulative Gain)</b>.\n",
+        "- Loss Functions: Similar to RankNet but with <b>gradient scaling</b> basd on NDCG improvements.\n",
+        "\n",
+        "<b>Listwise Gradient Scaling (LambdaRank)</b>\n",
+        "$$ Lambda_{i} = \\frac {\\partial NDCG}{\\partial S_{i}} $$\n",
+        "\n",
+        "where lambda_{i} ensures that improving rankings <b>for higher NDCG scores</b> results in stronger updates.\n",
+        "\n",
+        "- Challenges Encountered:\n",
+        "  - <b>Pairwise vs Listwise Implementation</b>: Intially implemented as pairwise but had to refactor the model to process an <b>entire ranking list.</b>\n",
+        "  - <b>Why are some scores the same?</b> The model was outputting <b>similar scores across all candidates</b> due to <b>improper weight updates</b> - resolved by fine-tuning the learning rate.\n",
+        "  - <b>Weight updates stuck at 0:</b> Ensured correct <b>gradient computation and backpropagation flow</b> by monitoring weight updates."
+      ],
+      "metadata": {
+        "id": "4AtAKeP0ZtZV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Key Takeaways & Best Practices**\n",
+        "<br>\n",
+        "1. <b>Sigmoid Placement</b>\n",
+        "  - <b>For RankNet:</b> Apply sigmoid inside <b>the loss function</b> rather than at the final layer.\n",
+        "  - <b>For LambdaRank:</b> No sigmoid at the final layer - raw scores work better for ranking optimization.\n",
+        "2. <b>Pairwise</b> vs <b>Listwise Trade-offs</b>:\n",
+        "  - <b>Pairwise(RankNet)</b> is easier to train but <b>cannot optimize global ranking metrics.</b>\n",
+        "  - <b>Listwise (LambdaRank)</b> is better for <b>NDCG optimization</b> but requires <b>more computational power.</b>\n",
+        "3. <b>Model Stability:</b>\n",
+        "  - <b>Gradient clipping (max_norm=1)</b> helped prevent <b>exploding gradients.</b>\n",
+        "  - <b> Lowering the learning rate (e.g., 0.01 instaed of 0.1)</b> stabilized training."
+      ],
+      "metadata": {
+        "id": "yc4n0857k3r9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Final Thoughts**:\n",
+        "<br>Both <b>RankNet and LambdaRank</b> are powerful Learning to Rank approaches. RankNet is intuitive but limited to <b>local comparisons</b>, while LambdaRank <b>leverages listwise ranking metrics</b> for improved global ranking. Implementing both models <b>helped in understanding how ranking optimizaiton differs from classification tasks</b> - and knowing <b>where to place sigmoid</b> turned out to be one of the most important decisions!\n",
+        "\n",
+        "Next: I'm gonna go back to Step 1, the text processing part and would work on the latest NLP models including <b>DeepSeek</b>."
+      ],
+      "metadata": {
+        "id": "EyiRA53emoVM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Z9Rb7W2OXrrY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
