--- a/Project3-PotentialTalents/grokai_api.ipynb
+++ b/Project3-PotentialTalents/grokai_api.ipynb
@@ -35,7 +35,7 @@
           "background_save": true
         },
         "id": "I-ECoICzjjpC",
-        "outputId": "a463d50e-715a-44ba-d150-5e5edb0cf31d"
+        "outputId": "b3da5646-7497-48f4-8655-3b4e300c2c5b"
       },
       "outputs": [
         {
@@ -68,7 +68,7 @@
           "background_save": true
         },
         "id": "kuj37pGUulAy",
-        "outputId": "0a947397-fd6c-46e4-f65d-dc01d3154cb1"
+        "outputId": "8467191a-6d91-4e68-92ac-5c80bd1faba0"
       },
       "outputs": [
         {
@@ -215,7 +215,7 @@
           "background_save": true
         },
         "id": "T9eEDUDNrNp9",
-        "outputId": "adb8144b-5761-4505-9380-f061feb5408f"
+        "outputId": "a960dc12-3280-489e-9cb3-ddd64feec4c1"
       },
       "outputs": [
         {
@@ -296,7 +296,7 @@
           "height": 423
         },
         "id": "rwvU93lcvLwQ",
-        "outputId": "3bbd9a7f-67f1-4bf8-b9a1-aaf180c90b22"
+        "outputId": "1c311281-9eae-48f7-9b19-501d62cf6e7b"
       },
       "outputs": [
         {
@@ -2727,16 +2727,16 @@
         "    return max(0, min(1, score))  # 값이 0~1 범위 내에 있도록 보정\n",
         "  except Exception as e:\n",
         "    print(f\"Error processing: {job_titles}, {search_term} - {e}\")\n",
-        "    return 0      # 에러 발생 시 기본값 0 반환\n",
+        "    return 0\n",
         "\n",
         "\n",
         "\n",
         "# Modifying these part\n",
         "# it's going to be more costly, calling API every time when it works on each row, instead call the df and make it calculate the whole at once\n",
-        "# 각 후보자의 'fit' 점수예측,\n",
+        "# Predicting 'fit' score for each candidate\n",
         "df_copy[\"fit\"] = df_copy.apply(lambda row: get_fitness_score(row[\"job_title\"], row[\"connection\"]), axis=1)\n",
         "\n",
-        "# 내림차순 정렬\n",
+        "# descending order\n",
         "df_sorted = df_copy.sort_values(by=\"fit\", ascending=False)\n",
         "df_sorted"
       ]
@@ -2748,7 +2748,8 @@
       "gpuType": "T4",
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTu6gAIYk+hRrSMZhDzT1P",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMAGGEgya3p/5cHgqi2Xm9l",
       "include_colab_link": true
     },
     "kernelspec": {
