--- a/Project3-PotentialTalents/phi.ipynb
+++ b/Project3-PotentialTalents/phi.ipynb
@@ -4,10 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "A100",
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMzCyQDRHQILlI8kf8ZcfX7",
+      "authorship_tag": "ABX9TyP57Bbl20YJIlY2Wqq5eqGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4477,7 +4476,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shinnew9/Apziva_practice_code/blob/main/phi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shinnew9/Apziva_practice_code/blob/main/Project3-PotentialTalents/phi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -5135,7 +5134,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!huggingface-cli whoami --token"
+        "!huggingface-cli login\n",
+        "# !huggingface-cli whoami --token"
       ],
       "metadata": {
         "colab": {
@@ -5206,10 +5206,7 @@
         "import torch\n",
         "import os\n",
         "import re\n",
-        "from huggingface_hub import login\n",
-        "\n",
-        "os.environ[\"HF_TOKEN\"] = \"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\"\n",
-        "login(token=os.environ[\"HF_TOKEN\"])"
+        "from huggingface_hub import login"
       ],
       "metadata": {
         "colab": {
