THIS IS IT with the Conclusion😎

--- a/Project3-PotentialTalents/ThisIsIt_OLMoE_LLMFineTune_w_LoRA+RAGw_FAISS.ipynb
+++ b/Project3-PotentialTalents/ThisIsIt_OLMoE_LLMFineTune_w_LoRA+RAGw_FAISS.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shinnew9/Apziva_practice_code/blob/main/Project3-PotentialTalents/ThisIsIt_OLMoE_LLMFineTune_w_LoRA%2BRAGw_FAISS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -9558,22 +9568,47 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### Conclusion"
+      ],
       "metadata": {
-        "id": "Dh89i83701Rk"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "ArTCzQ1jCk3W"
+      }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Over the course of this project, I went through numerous trials and iterations to build a robust talent-matching pipeline.\n",
+        "<br><br>\n",
+        "#### 🧩 Step 1 - Word Emebedding <br>\n",
+        "I experimented with traditional vector-based similarity techniques including TF-IDF, Word2Vec (CBOW & Skip-gram), GloVe, and FastText to embed job titles and compare them with search terms like \"Aspiring Human Resources\".\n",
+        "<br><br>\n",
+        "#### ⚙️ Step 2 – Learning to Rank <br>\n",
+        "To go beyond static similarity, I implemented Learning-to-Rank with LambdaRank, where I trained a model to assign fit scores and dynamically re-rank candidates based on human feedback (e.g., “starring” the ideal candidate).\n",
+        "<br><br>\n",
+        "#### 🧠 Applying LLMs <br>\n",
+        "To incorporate deeper contextual understanding, I explored several Large Language Models (LLMs).\n",
+        "  - I downloaded and tested latest models from **HuggingFace**, including Qwen, Phi, GPT-4, and DeepSeek-r1, and accessed others through **OpenAI API** and **Grok API**.\n",
+        "  - However, when loading models via **API access**, I didn’t have control over the **model weights**, so I wasnt't able to fine-tune them.\n",
+        "  - Therefore, I selected **OLMoE**, an open-source LLM from **AllenAI**, and fine-tuned it using **LoRA** (Low-Rank Adaptation), enabling efficient parameter-efficient finetuning on my own dataset.\n",
+        "\n",
+        "\n",
+        "#### 🔍 RAG with FAISS <br>\n",
+        "To enhance contextual reasoning, I applied **RAG (Retrieval-Augmented Generation)** using **FAISS** instead of Pinecone due to version issues.\n",
+        "This allowed the model to **retrieve external knowledge** from an HR reference document and use it to produce more grounded answers.\n",
+        "<br><br>\n",
+        "#### 🐞 GitHub & Metadata Issues <br>\n",
+        "While publishing the notebook to GitHub, I encountered:\n",
+        "“Invalid Notebook: 'state' key is missing from metadata.widgets.”\n",
+        "I resolved it by opening the .ipynb file in VS Code as a **text-based JSON**, locating \"widgets\" under \"metadata\", and **removing it manually** to ensure compatibility.\n",
+        "<br><br>\n",
+        "#### 🎯 Final Takeaway <br>\n",
+        "This project demonstrated how **traditional NLP, ranking algorithms, LLMs, and RAG** can be combined into a pipeline for candidate evaluation — and how practical issues like **fine-tuning access, library compatibility, and deployment** must be addressed along the way."
+      ],
       "metadata": {
-        "id": "9wjME_EW01Or"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "4p4Mt1vBNCjh"
+      }
     }
   ],
   "metadata": {
@@ -9585,7 +9620,8 @@
       "toc_visible": true,
       "collapsed_sections": [
         "UKQXZjh5cI4F"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -9595,8 +9631,6 @@
       "name": "python"
     }
   },
-
   "nbformat": 4,
   "nbformat_minor": 0
-  
 }
